--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,10 +4,18 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + Vue + TS</title>
+    <title>FWE Hausaufgabe SS25 1123137</title>
   </head>
   <body>
     <div id="app"></div>
+
     <script type="module" src="/src/main.ts"></script>
+
+    <!--Ubung-->
+    <script type="text/javascript">
+      const root = document.getElementById("app");
+      const element = document.createElement("div");
+      root.appendChild(element);
+    </script>
   </body>
 </html>
